[package]
name = "libexif"
version = "0.0.1"
authors = [
    "David Cuddeback <david.cuddeback@gmail.com>",
    "Nathan Fiedler nathanfiedler@fastmail.fm>",
]
description = "Safe Rust wrapper for the libexif C EXIF library."
homepage = "https://github.com/nlfiedler/libexif"
repository = "https://github.com/nlfiedler/libexif"
readme = "README.md"
license = "MIT"
keywords = ["libexif", "exif", "image"]

[dependencies]
libexif-sys = { git = "https://github.com/nlfiedler/libexif-sys.git" }
libc = "0.2"
